# Quarticle

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: draw.h  glad.c  main.cpp  particles.h  ui.h
